# ai-engineering

./: .gitignore  LICENSE  README.md
Midterm/: app.py  docker-compose.yml  notebook_version.ipynb  pyproject.toml
Week2Day1/: RAQA_simon.ipynb  pyproject.toml
Week4Day1/: Evaluation_of_RAG_using_Ragas_Assignment_Notebook.ipynb
Week4Day2/: Creating_a_LlamaIndex_RAG_Pipeline_with_NL2SQL_and_Metadata_Filtering_Assignment.ipynb
Week5Day2/: Simon-LangChain_with_Hugging_Face_Inference_API_Endpoints_(Assignment).ipynb
Week6Day1/: LangGraph_and_LangSmith_Assignment_Version.ipynb
demoday/: Dockerfile  pyproject.toml
demoday/demoday/: app.py  column_name_getter_chain.py  fpl.db  populate_db.py  sample_retriever.py  website_data.py
