[tool.poetry]
name = "week2-day1"
version = "0.1.0"
description = ""
authors = ["Simon Monk <smonk@conexiom.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
python-dotenv = "1.0.0"
openai = "^1.12.0"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
ipykernel = "^6.29.2"
matplotlib = "^3.8.3"
plotly = "^5.19.0"
wandb = "^0.16.3"
langchain = "^0.1.9"
pypdf = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
